{{$NEXT}}

v0.6	2018-11-11

    * Fix location of use v6 for v6.d. :(

v0.5    July 4, 2018

    * Fix #12: Searches for items like some/*/*/foo.json failed on the first
      non-directory encountered. This probably also failed on several other
      similar deep searches.
    * Dir handling did not do a good job of avoiding ".." and "." in matches
      where should have.
    * Corrected documentation errors in the POD

v0.4    April 25, 2018

    * When an alternate sequence is given, the ordering of the alternates should
      now be respected, but only if you use the dir method or iterate over the
      glob object directly (because the other methods depend on ACCEPTS and
      ACCEPTS provides no means of adding order, just truthiness of a match).
    * Releasing to CPAN.

v0.3    December 11, 2016

    * Fix #4: The API of IO::Path changed, breaking tests. Better
      checks to make sure we stringify the filename prior to using it in both
      places.
    * PR #5: Updated a spot in the docs making a similar fix to make sure to
      stringify explicitly to get the filename back. (HT: @JJ)
     
v0.2    August 30, 2016

    * Fix: Some patterns did not work. Collecting char-match terms together
      fixes the problem.
    * Fix: Sort directory results when testing because .dir order is not
      guaranteed. (HT: ppentchev)

v0.1    February 10, 2016

    * Initial release.